--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@
                       class="sc-bdfBwQ sc-bBXqnf hhuhyt dAjEzi group"
                     >
                       <a
-                        href="https://utama.originsosmed.digital/"
+                        href="https://asli.bangoostdigital.store/"
                         target="_blank"
                         rel="noopener"
                         data-testid="LinkButton"
