--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
       }
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
       jQuery(document).ready(function ($) {
         if (window.history && window.history.pushState) {
           $(window).on("popstate", function () {
@@ -1596,6 +1596,6 @@
           window.history.pushState("forward", null, "./#forward");
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
